# sling

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/routes/: chat.py  compare.py  dataset.py  drug.py  knowledge.py  report.py  upload.py
backend/services/: comparison_engine.py  drug_engine.py  knowledge_graph.py  llm_agent.py  pocket_engine.py  protein_parser.py  report_generator.py
frontend/: index.html
frontend/public/fpocket-runner/: fpocket.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: chat.js  protein.js
frontend/src/components/: ChatPanel.jsx  DrugCard.jsx  KnowledgeGraph.jsx  PocketList.jsx  PocketRadar.jsx  WasmPocketPanel.jsx  WasmPocketRunner.jsx
frontend/src/pages/: ComparePage.jsx  DatasetPage.jsx  UploadPage.jsx  ViewerPage.jsx
frontend/src/viewer/: ProteinViewer.jsx
